# gtest-esp-idf

./: .gitignore  README.md  gtest-esp-idf.code-workspace
.github/workflows/: 01_build_esp32.yml  01_host_tests.yml  02_build_esp32.yml  02_host_tests.yml  03_build_esp32.yml  03_host_test.yml  04_build_esp32.yml  04_host_tests.yml
01_basic_test/: CMakeLists.txt  README.md
01_basic_test/host_test/test_sum/: CMakeLists.txt  README.md
01_basic_test/host_test/test_sum/main/: CMakeLists.txt  test_sum.cpp
01_basic_test/include/: i_sum.hpp  sum.hpp
01_basic_test/src/: sum.cpp
01_basic_test/test_apps/test_build/: CMakeLists.txt
01_basic_test/test_apps/test_build/main/: CMakeLists.txt  main.cpp
02_idf_mocks/: CMakeLists.txt  README.md
02_idf_mocks/host_test/test_sum/: CMakeLists.txt  README.md
02_idf_mocks/host_test/test_sum/main/: CMakeLists.txt  test_sum_param.cpp
02_idf_mocks/include/: i_sum.hpp  sum.hpp
02_idf_mocks/src/: sum.cpp
02_idf_mocks/test_apps/test_build/: CMakeLists.txt
02_idf_mocks/test_apps/test_build/main/: CMakeLists.txt  main.cpp
03_class_mocks/host_test/test_sum/main/: CMakeLists.txt
03_class_mocks/include/: sum_boss.hpp
03_class_mocks/src/: sum.cpp  sum_boss.cpp
03_class_mocks/test_apps/test_build/: CMakeLists.txt
03_class_mocks/test_apps/test_build/main/: CMakeLists.txt
04_hal_and_leds/: CMakeLists.txt  README.md
04_hal_and_leds/host_test/test_sum/: CMakeLists.txt  README.md  sdkconfig.defaults
04_hal_and_leds/host_test/test_sum/main/: CMakeLists.txt  test_led_sargent.cpp  test_sum.cpp  test_sum_boss.cpp
04_hal_and_leds/include/: gpio_hal.hpp  i_gpio_hal.hpp  i_led_sargent.hpp  led_sargent.hpp  sum.hpp  sum_boss.hpp
04_hal_and_leds/src/: led_sargent.cpp  sum_boss.cpp
04_hal_and_leds/test_apps/test_build/: CMakeLists.txt
04_hal_and_leds/test_apps/test_build/main/: main.cpp
